fixing header style

--- a/src/app/components/header/header.component.css
+++ b/src/app/components/header/header.component.css
@@ -1,5 +1,10 @@
 .navbar {
   border-radius: 0;
+  color: white;
+  display: flex;
+}
+.collapse{
+  color: white;
 }
 .navbar-nav,
 .navbar-header {
