adding sorting functionality

--- a/src/app/components/movie/movie.component.css
+++ b/src/app/components/movie/movie.component.css
@@ -1,3 +1,13 @@
 .description {
   width: 30%;
 }
+.arrows {
+  color: white;
+  margin-left: 10px;
+  cursor: pointer;
+}
+
+.arrows-container{
+  display: flex;
+  justify-content: space-between;
+}
