--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -19,6 +19,9 @@
         <li class="nav-item">
           <a class="nav-link" routerLink="/movies">Movies</a>
         </li>
+        <li class="nav-item">
+          <a class="nav-link" routerLink="/new">Add new Movie</a>
+        </li>
       </ul>
     </div>
   </div>
