--- a/src/app/components/movie/movie.component.html
+++ b/src/app/components/movie/movie.component.html
@@ -22,7 +22,7 @@
     </tr>
   </thead>
   <tbody>
-    <tr *ngFor="let movie of movies; index as i">
+    <tr *ngFor="let movie of movies; index as i" [routerLink]="['/movies',movie.title]">
       <th scope="row">{{ i + 1 }}</th>
       <td>
         <strong>{{ movie.title }}</strong>
@@ -36,3 +36,4 @@
     </tr>
   </tbody>
 </table>
+<router-outlet></router-outlet>
