change http requests for getting  object instead of array and add new moviefunctionality  is work

--- a/src/app/components/add-new-movie/add-new-movie.component.html
+++ b/src/app/components/add-new-movie/add-new-movie.component.html
@@ -27,7 +27,7 @@
         class="form-control"
         id="year"
         formControlName="year"
-        placeholder="DD-MM-YYYY"
+        placeholder="MM-DD-YYYY"
       />
     </div>
     <div class="mb-3">
