edit Movie, add data-storage service

--- a/src/app/components/add-new-movie/add-new-movie.component.html
+++ b/src/app/components/add-new-movie/add-new-movie.component.html
@@ -55,7 +55,7 @@
         rows="6"
       ></textarea>
     </div>
-    <button type="submit" class="btn btn-dark" [disabled]="!addMovieForm.valid">Add</button> |
+    <button type="submit" class="btn btn-dark" [disabled]="!addMovieForm.valid">{{editMode? "Edit" : "Add"}}</button> |
     <button type="submit" class="btn btn-dark" (click)="onCancel()">Cancel</button>
   </form>
 </div>
