--- a/src/app/components/movies-page/movies-page.component.html
+++ b/src/app/components/movies-page/movies-page.component.html
@@ -1,1 +1,5 @@
-<app-movie></app-movie>
+<app-movie
+  [movies]="movies"
+  (onAscendingSort)="ascendingSort($event)"
+  (onDescendingSort)="descendingSort($event)"
+></app-movie>
