added delete button in movies table
go to target movie by clicking the poster instead of anywhere on the row

--- a/src/app/components/movies-page/movies-page.component.html
+++ b/src/app/components/movies-page/movies-page.component.html
@@ -2,4 +2,5 @@
   [movies]="movies"
   (onAscendingSort)="ascendingSort($event)"
   (onDescendingSort)="descendingSort($event)"
+  (onDelete)="deleteMovie($event)"
 ></app-movie>
