--- a/src/app/components/movie/movie.component.html
+++ b/src/app/components/movie/movie.component.html
@@ -1,4 +1,6 @@
-<table class="table table-bordered table-striped table-dark table-hover align-middle">
+<table
+  class="table table-bordered table-striped table-dark table-hover align-middle"
+>
   <thead class="thead-dark">
     <tr>
       <th scope="col" routerLink>#</th>
@@ -19,10 +21,11 @@
         </span>
       </th>
       <th scope="col">Poster</th>
+      <th scope="col">Delete</th>
     </tr>
   </thead>
   <tbody>
-    <tr *ngFor="let movie of movies; index as i" [routerLink]="['/movies',movie.title]">
+    <tr *ngFor="let movie of movies; index as i">
       <th scope="row">{{ i + 1 }}</th>
       <td>
         <strong>{{ movie.title }}</strong>
@@ -31,7 +34,21 @@
       <td>{{ movie.director }}</td>
       <td>{{ movie.year | date: "dd MMM yyyy" }}</td>
       <td>
-        <img [src]="movie.img" class="mr-2" style="width: 200px" />
+        <img
+          [src]="movie.img"
+          class="mr-2"
+          style="width: 200px"
+          [routerLink]="['/movies', movie.title]"
+        />
+      </td>
+      <td>
+        <button
+          type="button"
+          class="btn btn-danger"
+          (click)="deleteMovie(movie.title)"
+        >
+          Delete
+        </button>
       </td>
     </tr>
   </tbody>
