--- a/src/app/components/home-page/carousel/carousel.component.html
+++ b/src/app/components/home-page/carousel/carousel.component.html
@@ -1,1 +1,9 @@
-<p>carousel</p>
+<!-- <carousel
+    [images]="images">
+</carousel> -->
+
+<carousel >
+  <div class="carousel-cell" *ngFor="let movie of movies">
+      <img  [src]="movie.img" style="object-fit: cover;">
+  </div>
+</carousel>
