--- a/src/app/components/home-page/carousel/carousel.component.html
+++ b/src/app/components/home-page/carousel/carousel.component.html
@@ -1,9 +1,10 @@
 <!-- <carousel
     [images]="images">
 </carousel> -->
-
-<carousel >
-  <div class="carousel-cell" *ngFor="let movie of movies">
-      <img  [src]="movie.img" style="object-fit: cover;">
-  </div>
-</carousel>
+<div class="container">
+  <carousel>
+    <div class="carousel-cell" *ngFor="let movie of movies">
+      <img [src]="movie.img" style="object-fit: cover" [routerLink]="['/movies', movie.title]"/>
+    </div>
+  </carousel>
+</div>
