--- a/src/app/components/movies-page/selected-movie/selected-movie.component.css
+++ b/src/app/components/movies-page/selected-movie/selected-movie.component.css
@@ -1,5 +1,5 @@
 .container {
-  position: relative;
+  
   background-image: url("../../../../assets/images/background.jpg");
   background-repeat: no-repeat;
   background-size: cover;
@@ -31,6 +31,7 @@ img {
   text-align: center;
   font-weight: 700;
   cursor: pointer;
+  position: relative;
 }
 
 .movie-info-container{
@@ -39,12 +40,13 @@ img {
 
 .descriprion-container {
   position: absolute;
-  top: 80px;
-  left: 80px;
+  top: 70px;
+  /* right: 20px; */
   z-index: 2;
   background-color: rgb(189, 189, 15);
   border: 1px solid rgb(141, 141, 27);
   padding: 10px;
+  width: 550px;
 }
 
 h3,
