--- a/src/app/components/add-new-movie/add-new-movie.component.css
+++ b/src/app/components/add-new-movie/add-new-movie.component.css
@@ -1,3 +1,12 @@
 label {
     color: white;
 }
+
+.container {
+width: 60%;
+border: 1px solid gray;
+margin: 15px auto;
+padding: 15px;
+border-radius: 5px;
+background-color: rgb(58, 58, 58);
+}
