limk to all directors on home page

--- a/src/app/components/home-page/home-page.component.html
+++ b/src/app/components/home-page/home-page.component.html
@@ -1,1 +1,15 @@
 <app-carousel></app-carousel>
+
+<div class="director-container">
+  <h4>Movies Directors:</h4>
+  <button
+    *ngFor="let movie of movies"
+    class="btn btn-light"
+    type="button"
+    [routerLink]="['/movies', movie.director]"
+  >
+    {{ movie.director }}
+  </button>
+</div>
+
+<router-outlet></router-outlet>
