Is this the right way of doing this?

--- a/src/app/components/movie/movie.component.html
+++ b/src/app/components/movie/movie.component.html
@@ -53,4 +53,11 @@
     </tr>
   </tbody>
 </table>
+
+<!-- <div *ngFor="let movie of movies | keyvalue: valueDescOrder">
+  <div>{{ movie.key }}</div>
+  <div *ngFor="let info of movie.value | keyvalue">
+    {{ info.value }}
+  </div>
+</div> -->
 <router-outlet></router-outlet>
