--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,7 +1,10 @@
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
   <div class="container-fluid">
     <a class="navbar-brand" routerLink="/">
-      <img src="https://firebasestorage.googleapis.com/v0/b/angular-project-e49e1.appspot.com/o/PikPng.com_movie-png-icon_3276414.png?alt=media&token=32499c82-b48d-455e-8dd4-4a2739efd037" alt="Logo" />
+      <img
+        src="https://firebasestorage.googleapis.com/v0/b/angular-project-e49e1.appspot.com/o/PikPng.com_movie-png-icon_3276414.png?alt=media&token=32499c82-b48d-455e-8dd4-4a2739efd037"
+        alt="Logo"
+      />
     </a>
     <button
       class="navbar-toggler"
@@ -21,6 +24,15 @@
         </li>
         <li class="nav-item">
           <a class="nav-link" routerLink="/new">Add new Movie</a>
+        </li>
+      </ul>
+    </div>
+  </div>
+  <div class="login">
+    <div class="collapse navbar-collapse" id="navbarText">
+      <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+        <li class="nav-item">
+          <a class="nav-link" routerLink="/movies">Login</a>
         </li>
       </ul>
     </div>
