created editMovie page and movieByDirector page

--- a/src/app/components/add-new-movie/add-new-movie.component.html
+++ b/src/app/components/add-new-movie/add-new-movie.component.html
@@ -8,6 +8,7 @@
         id="title"
         formControlName="title"
         placeholder="Enter Title"
+        [attr.disabled]="editMode ? 'disabled' : null"
       />
     </div>
     <div class="mb-3">
