--- a/src/app/components/movies-page/movie/movie.component.html
+++ b/src/app/components/movies-page/movie/movie.component.html
@@ -29,7 +29,7 @@
         <strong>{{ movie.title }}</strong>
       </td>
       <td>{{ movie.description }}</td>
-      <td>{{ movie.director }}</td>
+      <td [routerLink]="['/movies/director', movie.director]">{{ movie.director }}</td>
       <td>{{ movie.year | date: "dd MMM yyyy" }}</td>
       <td>
         <img [src]="movie.img" class="mr-2" style="width: 200px" [routerLink]="['/movies', movie.title]" />
