--- a/src/app/components/movies-page/selected-movie/selected-movie.component.css
+++ b/src/app/components/movies-page/selected-movie/selected-movie.component.css
@@ -1,5 +1,4 @@
 .container {
-  position: relative;
   background-image: url("../../../../assets/images/background.jpg");
   background-repeat: no-repeat;
   background-size: cover;
@@ -31,6 +30,7 @@ img {
   text-align: center;
   font-weight: 700;
   cursor: pointer;
+  position: relative;
 }
 
 .movie-info-container{
@@ -39,12 +39,13 @@ img {
 
 .descriprion-container {
   position: absolute;
-  top: 80px;
-  left: 80px;
+  top: 70px;
+  /* right: 20px; */
   z-index: 2;
   background-color: rgb(189, 189, 15);
   border: 1px solid rgb(141, 141, 27);
   padding: 10px;
+  width: 450px;
 }
 
 h3,
@@ -55,4 +56,11 @@ h5 {
 h3 {
   font-weight: 900;
   font-size: 30px;
+}
+
+.loading {
+  margin: 80px auto;
+  color: white;
+  font-size: 28px;
+  text-align: center;
 }
