--- a/src/app/components/movies-page/movie/movie.component.html
+++ b/src/app/components/movies-page/movie/movie.component.html
@@ -23,8 +23,9 @@
     </tr>
   </thead>
   <tbody>
-    <tr *ngFor="let movie of movies; index as i">
+    <tr *ngFor="let movie of movies | filter:inputValue; index as i">
       <th scope="row">{{ i + 1 }}</th>
+
       <td>
         <strong>{{ movie.title }}</strong>
       </td>
