--- a/src/app/components/movies-page/movies-page.component.html
+++ b/src/app/components/movies-page/movies-page.component.html
@@ -1,5 +1,5 @@
-<app-movie
-  [movies]="movies"
-  (onSort)="sortMovies($event)"
-  (onDelete)="deleteMovie($event)"
-></app-movie>
+
+<div class="input-container">
+    <input type="text" [(ngModel)]="inputValue" class="input" placeholder="Search...">
+</div>
+<app-movie [movies]="movies" [inputValue]="inputValue" (onSort)="sortMovies($event)" (onDelete)="deleteMovie($event)"></app-movie>
