bug fixed - cancel button on addNewMovie page

--- a/src/app/components/add-new-movie/add-new-movie.component.html
+++ b/src/app/components/add-new-movie/add-new-movie.component.html
@@ -57,6 +57,6 @@
       ></textarea>
     </div>
     <button type="submit" class="btn btn-dark" [disabled]="!addMovieForm.valid">{{editMode? "Edit" : "Add"}}</button> |
-    <button type="submit" class="btn btn-dark" (click)="onCancel()">Cancel</button>
+    <button type="button" class="btn btn-dark" (click)="onCancel()">Cancel</button>
   </form>
 </div>
