getting selected movie through moviesArray (works on refreshing the page)

--- a/src/app/components/movies-page/selected-movie/selected-movie.component.html
+++ b/src/app/components/movies-page/selected-movie/selected-movie.component.html
@@ -1,15 +1,27 @@
-<div *ngIf="movie" class="container">
-  <div class="movie-container">
-    <img src={{movie.img}} alt={{movie.title}}>
-    <div class="movie-info-container">
-      <h3>{{movie.title}}</h3>
-      <h5>Year : {{movie.year| date: "dd MMM yyyy"}}</h5>
-      <h5>Director : {{movie.director}}</h5>
-    </div>
-    <div>
-      <div class="info-container" (mouseover)="onMouseOver()" (mouseleave)="onMouseLeave()">i</div>
-      <div class="descriprion-container" *ngIf="hoverDescription">{{movie.description}}</div>
+<div *ngIf="!movie; else movieContainer" [ngStyle]="{ color: 'green' }">
+  Loading...
+</div>
+<ng-template #movieContainer>
+  <div class="container">
+    <div class="movie-container">
+      <img src="{{ movie.img }}" alt="{{ movie.title }}" />
+      <div class="movie-info-container">
+        <h3>{{ movie.title }}</h3>
+        <h5>Year : {{ movie.year | date: "dd MMM yyyy" }}</h5>
+        <h5>Director : {{ movie.director }}</h5>
+      </div>
+      <div>
+        <div
+          class="info-container"
+          (mouseover)="onMouseOver()"
+          (mouseleave)="onMouseLeave()"
+        >
+          i
+        </div>
+        <div class="descriprion-container" *ngIf="hoverDescription">
+          {{ movie.description }}
+        </div>
+      </div>
     </div>
   </div>
-
-</div>
+</ng-template>
