--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -17,7 +17,12 @@
     <div class="collapse navbar-collapse" id="navbarText">
       <ul class="navbar-nav me-auto mb-2 mb-lg-0">
         <li class="nav-item">
-          <a class="nav-link" routerLink="/movies">Movies</a>
+          <a
+            class="nav-link"
+            routerLink="/movies"
+            [queryParams]="{ cardsView: false }"
+            >Movies</a
+          >
         </li>
         <li class="nav-item">
           <a class="nav-link" routerLink="/new">Add new Movie</a>
