try to save images in firebase storage but not success

--- a/src/app/components/movies-page/movie-by-director/movie-by-director.component.html
+++ b/src/app/components/movies-page/movie-by-director/movie-by-director.component.html
@@ -1,4 +1,4 @@
-<div *ngIf="movies; else loading" class="container">
+<div *ngIf="moviesByDirector" class="container">
   <div class="card-container">
     <div
       *ngFor="let movie of moviesByDirector"
