small css changes

--- a/src/app/components/movies-page/movie-card/movie-card.component.html
+++ b/src/app/components/movies-page/movie-card/movie-card.component.html
@@ -1,4 +1,4 @@
-<div class="card col" style="width: 12rem; margin: 0px">
+<div class="card col">
   <img [src]="movie.img" class="card-img-top" [alt]="movie.title" />
   <div class="card-body">
     <h5 class="card-title">{{ movie.title }}</h5>
