--- a/src/app/components/add-new-movie/add-new-movie.component.css
+++ b/src/app/components/add-new-movie/add-new-movie.component.css
@@ -1,16 +1,20 @@
 label {
-    color: white;
+  color: white;
 }
 
 .container {
-width: 60%;
-border: 1px solid gray;
-margin: 15px auto;
-padding: 15px;
-border-radius: 5px;
-background-color: rgb(58, 58, 58);
+  width: 60%;
+  border: 1px solid gray;
+  margin: 15px auto;
+  padding: 15px;
+  border-radius: 5px;
+  background-color: rgb(58, 58, 58);
 }
 
-img{
-    width: 250px;
+img {
+  width: 250px;
+}
+
+.spanFull {
+  color: white;
 }
