--- a/src/app/components/add-new-movie/add-new-movie.component.html
+++ b/src/app/components/add-new-movie/add-new-movie.component.html
@@ -31,6 +31,34 @@
         placeholder="MM-DD-YYYY"
       />
     </div>
+    <div class="mb-1">
+      <label for="imageUpload" class="form-label">Image Upload</label>
+      <input
+        class="form-control form-control-sm"
+        type="file"
+        (change)="onFileSelected($event)"
+        id="imageUpload"
+        #uploader
+      />
+      <button
+        type="button"
+        [ngClass]="'col-12 mt-2 mb-2 btn btn-sm btn-outline-light'"
+        (click)="uploadImage()"
+        [disabled]="!uploader.value"
+      >
+        Upload!
+      </button>
+      <div class="progress">
+        <div
+          [ngStyle]="{ width: percent + '%' }"
+          class="progress-bar"
+          aria-valuenow="0"
+          aria-valuemin="0"
+          aria-valuemax="100"
+        ></div>
+      </div>
+    </div>
+    <div class="col-12 text-center spanFull">OR</div>
     <div class="mb-3">
       <label for="img">Image URL</label>
       <input
@@ -56,7 +84,12 @@
         rows="6"
       ></textarea>
     </div>
-    <button type="submit" class="btn btn-dark" [disabled]="!addMovieForm.valid">{{editMode? "Edit" : "Add"}}</button> |
-    <button type="button" class="btn btn-dark" (click)="onCancel()">Cancel</button>
+    <button type="submit" class="btn btn-dark" [disabled]="!addMovieForm.valid">
+      {{ editMode ? "Edit" : "Add" }}
+    </button>
+    |
+    <button type="button" class="btn btn-dark" (click)="onCancel()">
+      Cancel
+    </button>
   </form>
 </div>
