added pie-chart visualisation of movies duration and a button to toggle it

--- a/src/app/components/home-page/home-page.component.html
+++ b/src/app/components/home-page/home-page.component.html
@@ -1,3 +1,9 @@
 <app-carousel></app-carousel>
 <!-- for testing -->
-<app-pie-chart-component></app-pie-chart-component>
+<button type="button" (click)="toggleDisplayChart()">
+  Movies duration chart
+</button>
+<app-pie-chart-component
+  *ngIf="isChartDisplayed"
+  [data]="movies"
+></app-pie-chart-component>
