moved the component in hope-page folder
added styles

--- a/src/app/components/home-page/home-page.component.html
+++ b/src/app/components/home-page/home-page.component.html
@@ -1,6 +1,5 @@
 <app-carousel></app-carousel>
-<!-- for testing -->
-<button type="button" (click)="toggleDisplayChart()">
+<button class="duration-btn" type="button" (click)="toggleDisplayChart()">
   Movies duration chart
 </button>
 <app-pie-chart-component
