added duration input field

--- a/src/app/components/add-or-edit-movie/add-or-edit-movie.component.html
+++ b/src/app/components/add-or-edit-movie/add-or-edit-movie.component.html
@@ -74,7 +74,16 @@
     <div class="mb-3">
       <img [src]="imagePath.value" class="img-responsive" />
     </div>
-
+    <div class="mb-3">
+      <label for="duration">Movie duration</label>
+      <input
+        type="number"
+        name="duration"
+        id="duration"
+        class="form-control"
+        formControlName="duration"
+      />
+    </div>
     <div class="mb-3">
       <label for="description">Description</label>
       <textarea
